--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   }
 }
 </script>
+<script type="module" src="./index.tsx"></script>
 </head>
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
